--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="favicon.ico" mce_href="favicon.ico" rel="icon" type="image/x-icon" /> 
     <link href="favicon.ico" mce_href="favicon.ico" rel="shortcut icon" type="image/x-icon" /> 
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <title>brainbank</title>
+    <title>大脑银行</title>
   </head>
   <body>
     <div id="app"></div>
