--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <link href="favicon.ico" mce_href="favicon.ico" rel="icon" type="image/x-icon" /> 
     <link href="favicon.ico" mce_href="favicon.ico" rel="shortcut icon" type="image/x-icon" /> 
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+<meta http-equiv="Pragma" content="no-cache" />
+<meta http-equiv="Expires" content="0" />
     <title>大脑银行</title>
   </head>
   <body>
